implement complete and ready for testing